Resolves a bug in display of expenses creation/edition because of z-index of the mask.

--- a/core/src/main/resources/css/admin.css
+++ b/core/src/main/resources/css/admin.css
@@ -37,7 +37,7 @@ div.menu_admin_selected{
 
 #mask{
 	position:absolute;
-	z-index:9000;
+	z-index:1;
 	background-color:#000;
 	display:none;top:0;
 	left:0;
@@ -53,7 +53,7 @@ div.menu_admin_selected{
 	width:440px;
 	height:440px;
 	display:none;	
-	z-index:9999;
+	z-index:2;
 	padding:20px;
 	top:0;
 	left:0;
@@ -70,7 +70,7 @@ div.menu_admin_selected{
 	width:440px;
 	height:300px;
 	display:none;
-	z-index:9999;
+	z-index:2;
 	padding:20px;
 	top:0;
 	left:0;
@@ -93,7 +93,7 @@ div.menu_admin_selected{
 	width:440px;
 	height:300px;
 	display:none;
-	z-index:9999;
+	z-index:2;
 	padding:20px;
 	top:0;
 	left:0;
